added images and thumbnails of 3 insects

--- a/insects.html
+++ b/insects.html
@@ -34,6 +34,17 @@
   </div>
 </div>
 <P> While the screen size is reduced the insect names row breakes first ,and the names are displayed in new line instead of a row.
-   This is due to col-md having more screen-width than col-sm.</P>
+   This is due to col-md having more screen-width than col-sm so insect name row has more screen width and breaks first</P>
+<div class = "container">
+  <img src="ant.jpg" class="img-fluid" alt="Ant" width="300" height="300">
+  <img src="moths.jpg" class="img-fluid" alt="A Moth" width="300" height="300">
+  <img src="silkworm.jpg" class="img-fluid" alt="Silk Worm" width="300" height="300">
+</div>
+<div class = "container">
+  <img src="ant.jpg" class="img-thumbnail" alt="thumbnailAnt" style = "width:75px; height:75px;">
+  <img src="moths.jpg" class="img-thumbnail" alt="thumbnailMoth" style = "width:75px; height:75px;">
+  <img src="silkworm.jpg" class="img-thumbnail" alt="thumbnailSilkWorm" style = "width:75px; height:75px;">
+</div>
+
 </body>
 </html>
