--- a/insects.html
+++ b/insects.html
@@ -45,6 +45,55 @@
   <img src="moths.jpg" class="img-thumbnail" alt="thumbnailMoth" style = "width:75px; height:75px;">
   <img src="silkworm.jpg" class="img-thumbnail" alt="thumbnailSilkWorm" style = "width:75px; height:75px;">
 </div>
-
+<table class="table table-bordered table-hover table-striped table-condensed table-dark" style="text-align: center;"> 
+  <caption class="caption-top">Letter , insect ,city , river</caption>
+  <thead>
+  <tr>
+      <th>Letter</th>
+      <th>Insect</th>
+      <th>City</th>
+      <th>River</th>
+  </tr>
+  </thead>
+  <tbody class="table-striped">
+  <tr>
+      <th>S</th>
+      <td>SilkWorm</td>
+      <td>Sydney</td>
+      <td>Salt Lake</td>
+  </tr>
+  <tr>
+      <th>A</th>
+      <td>Ant</td>
+      <td>Arizona</td>
+      <td>Agua Fria River</td>
+  </tr>
+  <tr>
+      <th>M</th>
+      <td>Moth</td>
+      <td>Michigan</td>
+      <td>Macatawa River</td>
+    </tr>
+    <tr>
+        <th>A</th>
+        <td>Alderflies</td>
+        <td>Alabama</td>
+        <td>Alabama River</td>
+    </tr>
+    <tr>
+        <th>L</th>
+        <td>Lacewing</td>
+        <td>Los Angeles</td>
+        <td>La Crosse River</td>
+    </tr>
+    <tr>
+        <th>A</th>
+        <td>Aphids</td>
+        <td>Alaska</td>
+        <td>Alatna River</td>
+    </tr>  
+    </tbody>
+ </table>
+ 
 </body>
 </html>
