--- a/insects.html
+++ b/insects.html
@@ -95,5 +95,19 @@
     </tbody>
  </table>
  
+ <div class="btn-toolbar" role="group" aria-label="Basic mixed styles example">
+ <div class="btn-group" role="group" aria-label="FirstGroup">
+    <button type="button" class="btn btn-success">S</button>
+    <button type="button" class="btn btn-success">A</button>
+    <button type="button" class="btn btn-success">M</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="SecondGroup">
+    <button type="button" class="btn btn-warning">A</button>
+    <button type="button" class="btn btn-warning">L</button>
+  </div>
+  <div class="btn-group" role="group" aria-label="ThirdGroup">
+    <button type="button" class="btn btn-danger">A</button>
+  </div>
+</div>
 </body>
 </html>
