--- a/insects.html
+++ b/insects.html
@@ -109,5 +109,14 @@
     <button type="button" class="btn btn-danger">A</button>
   </div>
 </div>
+<div class="dropdown" style="padding: 11px 14px;">
+  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenubar" data-bs-toggle="dropdown" aria-expanded="false">
+      Dropdown button
+  </a>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenubar">
+        <li><a class="dropdown-item" href="Basic.html">Basic HTML link</a></li>
+        <li><a class="dropdown-item" href="Advanced.html">Advanced HTML link</a></li>
+      </ul>
+  </div>
 </body>
 </html>
