added a Top Horizontal Nav Bar

--- a/insects.html
+++ b/insects.html
@@ -12,7 +12,30 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" 
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
 </head>
+
 <body>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="insects.html">Interesting Insects</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+    data-bs-target="#InsectNavbarContent" aria-controls="InsectNavbarContent" 
+    aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggle-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="InsectNavbarContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link active" href="insects.html">HOME</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="basic.html">BASIC</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="advanced.html">ADVANCED</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <h1>Insects by DhruvaTeja</h1>
 <div class="container">
   <div class ="row">
