--- a/insects.html
+++ b/insects.html
@@ -141,5 +141,26 @@
         <li><a class="dropdown-item" href="Advanced.html">Advanced HTML link</a></li>
       </ul>
   </div>
+
+  <div class="container">
+    <form actions="">
+    <div class="form-group">
+      <label for="exampleInputEmail1" class="form-label"><b>Email</b></label>
+      <input type="email" placeholder="Enter your email address:" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="form-group">
+      <label for="Insects" class="form-label"><b>Insect</b></label>
+      <input type="text" placeholder="Enter insect name:" class="form-control" for="insect">
+      <div id="InsectChoice" class="form-text">Enter your Insect.</div>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1"><b>Sign up for newsletter?</b></label>
+    </div>
+    <button type="submit" class="btn btn-primary"><b>Submit</b></button>
+  </form>
+  <div>
+  <br>
 </body>
 </html>
