added info cards for moths , ants, silk worms

--- a/insects.html
+++ b/insects.html
@@ -162,5 +162,52 @@
   </form>
   <div>
   <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md">
+      <div class="card" style="width: 18rem;">
+        <img src="ant.jpg" class="card-img-top" alt="Ants">
+        <div class="card-body">
+          <h5 class="card-title">Ants</h5>
+          <p class="card-text">
+            Ants are eusocial insects of the family Formicidae and, along with the related wasps and bees, belong to the order Hymenoptera. Ants evolved from vespoid wasp ancestors in the Cretaceous period. More than 13,800 of an estimated total of 22,000 species have been classified. They are easily identified by their geniculate (elbowed) antennae and the distinctive node-like structure that forms their slender waists.<br>
+
+Ants form colonies that range in size from a few dozen predatory individuals living in small natural cavities to highly organised colonies that may occupy large territories and consist of millions of individuals. Larger colonies consist of various castes of sterile, wingless females, most of which are workers (ergates), as well as soldiers (dinergates) and other specialised groups. Nearly all ant colonies also have some fertile males called "drones" and one or more fertile females called "queens" (gynes). The colonies are described as superorganisms because the ants appear to operate as a unified entity, collectively working together to support the colony.
+                 </p>
+          <a href="https://en.wikipedia.org/wiki/Ant" class="btn btn-primary">About</a>
+        </div>
+      </div>
+      </div>
+      <div class="col-md">
+      <div class="card" style="width: 18rem;">
+        <img src="silkworm.jpg" class="card-img-top" alt="Silkworm">
+        <div class="card-body">
+          <h5 class="card-title">Silk Worm</h5>
+          <p class="card-text">
+            Bombyx mori, the domestic silk moth, is an insect from the moth family Bombycidae. It is the closest relative of Bombyx mandarina, the wild silk moth. The silkworm is the larva or caterpillar of a silk moth. It is an economically important insect, being a primary producer of silk. A silkworm's preferred food are white mulberry leaves, though they may eat other mulberry species and even the osage orange. Domestic silk moths are entirely dependent on humans for reproduction, as a result of millennia of selective breeding. Wild silk moths (other species of Bombyx) are not as commercially viable in the production of silk.<br>
+
+Sericulture, the practice of breeding silkworms for the production of raw silk, has been under way for at least 5,000 years in China, whence it spread to India, Korea, Nepal, Japan, and the West. The domestic silk moth was domesticated from the wild silk moth Bombyx mandarina, which has a range from northern India to northern China, Korea, Japan, and the far eastern regions of Russia. The domestic silk moth derives from Chinese rather than Japanese or Korean stock.
+          </p>
+          <a href="https://en.wikipedia.org/wiki/Bombyx_mori" class="btn btn-primary">About</a>
+        </div>
+      </div>
+      </div>
+      <div class="col-md">
+      <div class="card" style="width: 18rem;">
+        <img src="moths.jpg" class="card-img-top" alt="Moths">
+        <div class="card-body">
+          <h5 class="card-title">Moths</h5>
+          <p class="card-text">
+            Numbers of species. Moths are in the insect Order Lepidoptera, and share this Order with Butterflies. There are some 160,000 species of moths in the world, compared to 17,500 species of butterflies. In the United States, there are nearly 11,000 species of moths.<br>
+            Distinctive characteristics. Moths (and their close relatives, the butterflies) are the only group of insects that have scales covering their wings, although there are a few exceptions. They differ from other insects also by their ability to coil up their feeding tube (the proboscis).
+ Moths can usually be distinguished from butterflies by their antennae, which are typically threadlike or feathery; in contrast, butterflies have club-tipped antennae.
+          </p>
+          <a href="https://www.si.edu/spotlight/buginfo/moths" class="btn btn-primary">About</a>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
